@@ -1,7 +1,7 @@
 Package: crlmm
 Type: Package
 Title: Genotype Calling (CRLMM) and Copy Number Analysis tool for SNP 5.0 and 6.0 arrays.
-Version: 1.0.61
+Version: 1.0.62
 Date: 2008-12-28
 Author: Rafael A Irizarry, Benilton S Carvalho <bcarvalh@jhsph.edu>, Robert Scharpf <rscharpf@jhsph.edu>
 Maintainer: Benilton S Carvalho <bcarvalh@jhsph.edu>, Robert Scharpf <rscharpf@jhsph.edu>
@@ -10,7 +10,7 @@ License: Artistic-2.0
 Imports: affyio, preprocessCore, utils, stats, genefilter, splines, Biobase, mvtnorm
 Suggests: hapmapsnp5, genomewidesnp5Crlmm, genomewidesnp6Crlmm (>= 1.0.1), methods, GGdata, snpMatrix
 Collate: AllClasses.R
-         crlmm-methods.R
+         methods-SnpSet.R
 	 cnrma-functions.R
          crlmm-functions.R
          snprma-functions.R
