@@ -49,9 +49,12 @@ BioC data packages
 2009-03-25 Rob Scharpf - committed version 1.0.61
 * update to copynumber vignette
 
+2009-03-27 B Carvalho - committed version 1.0.62
 
+* crlmm() returns a SnpSet object (from Biobase)
 
+* fixed standard vignette to accommodate this change
 
+* redefined calls/confs to accommodate this change
 
-
-
+* fixed documentation to acommodate this change
